fixed layout alignments

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h1 {
   width: 300px;
   border-radius: 10px;
   display: block;
-  margin: 25px auto 10px auto;
+  margin: 25px auto 15px auto;
 }
 
 .img-container {
@@ -154,6 +154,7 @@ h1 {
   border-color: hsl(215, 32%, 27%);
   margin-top: 15px;
   height: 1px;
+  margin-top: 25px;
   margin-left: 25px;
   margin-right: 25px;
 }
